# owl-stack

./: Cargo.toml  README.md  docker-compose.yml
crates/common-utils/: Cargo.toml
crates/nat64/: Cargo.toml
crates/owl-core/: Cargo.toml  Dockerfile
crates/owl-core/config/: owl-dev.toml
crates/owl-core/src/: errors.rs  firewall.rs  main.rs  tun.rs
crates/owl-dns/: Cargo.toml  Dockerfile
