[package]
name = "owl-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "signal"] }
notify = "8"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.30", default-features = false, features = ["user"] }
nftables = "0.6" 